--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Contact List Importer</title>
+    <script src="js/jquery.min.js" type="text/javascript" charge="utf-8"></script>
     <link rel="stylesheet" href="jquery.mobile.min.css" />
-    <script src="js/jquery.mobile.min.js" type="text/javascript" charge="utf-8"></script>
+    <script src="js/jquery.mobile.min.js" type="text/javascript" charge="utf-8"></script>    
     <!--script src="js/conlistimp.js" type="text/javascript" charge="utf-8"></script-->
     <script src="js/listfiles.js" type="text/javascript" charge="utf-8"></script>
   </head>
