--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <script src="js/jquery.min.js" type="text/javascript" charge="utf-8"></script>
     <link rel="stylesheet" href="jquery.mobile.min.css" />
     <script src="js/jquery.mobile.min.js" type="text/javascript" charge="utf-8"></script>    
-    <!--script src="js/conlistimp.js" type="text/javascript" charge="utf-8"></script-->
     <script src="js/listfiles.js" type="text/javascript" charge="utf-8"></script>
+    <script src="js/conlistimp.js" type="text/javascript" charge="utf-8"></script>
   </head>
   <body>
     <div id="results">
     </div>
-    <a href="#" id="browseSDCard"  data-role="button" class="big">Browse SD Card</a>
-    
   </body>
 </html>
